Added new validations
